tests/fixtures/return_fs_predicate.stderr
Error in tests/fixtures/return_fs_predicate.sh2:6:3
Error in tests/fixtures/return_fs_predicate.sh2:6:3
